--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
     <div class="container-fluid sticky-top" id="hide_nav"
         style="display: none; background-image: linear-gradient(rgba(0, 0, 0, 0.53), rgba(0, 0, 0, 0.53)), url('img/main_header.jpg'); background-size: cover; backdrop-filter: blur(30px);">
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar py-2 py-lg-0">
+            <nav class="navbar navbar-expand-lg navbar py-2 py-lg-0" id="scroll-nav">
                 <!-- <a href="index.html" style="width: 250px; height: auto">
                     <img class="img-fluid" src="img/logo_horizon.png" alt="Logo">
                 </a> -->
                 <!-- <a href="index.html" class="navbar-brand" style="margin-top: 15px;"> -->
-                        <img class="img-fluid" src="img/logo_white.png" alt="Logo" style="width: 5vh;">
+                        <img class="img-fluid" id="menu-logo" src="img/logo_white.png" alt="Logo" style="width: 8vh;">
                 <!-- </a> -->
                 <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
-                    data-bs-target="#navbarCollapse" style="background-color: rgba(0, 0, 0, 0.10);">
-                    <span class="navbar-toggler-icon"></span>
+                    data-bs-target="#navbarCollapse" style="background-image: url('img/hambuger.png'); height: 3vh; background-size: cover;">
+                    <span style=""></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
@@ -108,11 +108,11 @@
                                         <img class="img-fluid" src="img/logo_horizon.png" alt="Logo">
                                     </a> -->
                                     <!-- <a href="index.html" class="navbar-brand" style="margin-top: 15px;"> -->
-                                        <img class="img-fluid" src="img/logo_white.png" alt="Logo" style="width: 5vh;">
+                                        <img class="img-fluid" id="menu-logo" src="img/logo_white.png" alt="Logo" style="width: 8vh;">
                                     <!-- </a> -->
                                     <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
-                                        data-bs-target="#navbarCollapse" style="background-color: rgba(0, 0, 0, 0.20);">
-                                        <span class="navbar-toggler-icon"></span>
+                                        data-bs-target="#navbarCollapse" style="background-image: url('img/hambuger.png'); height: 3vh; background-size: cover;">
+                                        <span style="background-image: url('img/hambuger.png');"></span>
                                     </button>
                                     <div class="collapse navbar-collapse" id="navbarCollapse">
                                         <div class="navbar-nav ms-auto">
