--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="carousel-item active">
                     <img class="w-100" src="img/main_header.jpg" alt="Image" style="height: 100vh; object-fit: cover;">
                     <div class="carousel-caption"
-                        style="background-color: rgba(0, 0, 0, 0.53); align-items: baseline; flex-direction:column ; ">
+                        style="background-color: rgba(0, 0, 0, 0.53); align-items: baseline; flex-direction:column ; padding-top: 0px; ">
                         <div class="container-fluid sticky-top" style="backdrop-filter: blur(30px); ">
                             <div class="container">
                                 <nav class="navbar navbar-expand-lg navbar py-2 py-lg-0" >
